# csi-webserver

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  models.rs  serial.rs  state.rs
src/routes/: config.rs  control.rs  mod.rs  ws.rs
